--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vk-apps-themes",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "/src/index.js",
   "homepage": "./",
   "scripts": {
     "start": "cross-env PORT=10888 react-scripts start",
